// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: empty tab 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="risk"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
            <span
              className="counter-badge spacer-left"
            >
              1
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: fix 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="fix"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
            <span
              className="counter-badge spacer-left"
            >
              1
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about fixing !</p>",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: no tabs 1`] = `""`;

exports[`should render correctly: review 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="review"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
            <span
              className="counter-badge spacer-left"
            >
              1
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered"
  >
    <HotspotViewerReviewHistoryTab
      history={
        Array [
          Object {
            "date": "2013-05-13T17:55:41+0200",
            "type": 0,
            "user": Object {
              "active": true,
              "local": true,
              "login": "author",
              "name": "John Doe",
            },
          },
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: risk 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="risk"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
            <span
              className="counter-badge spacer-left"
            >
              1
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about risk !</p>",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: vulnerability 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="vulnerability"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
            <span
              className="counter-badge spacer-left"
            >
              1
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
        }
      }
    />
  </div>
</Fragment>
`;
